###### TWE 5.1-1 RELEASED ######
2014-06-18 Sasa Bojanic <sasaboy@together.at>
   # Improved GUI

2014-06-10 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to edit expressions in external editor application (new documentation section "Property file appsforextensions.properties" describes this feature)
   # Now XPDL is not marked as "Not saved" in the case opened XPDL has different value for JaWE_CONFIGURATION extended attribute of package
   
2014-06-02 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to set the working directory with system parameter JaWE_WORKING_DIR (the place where TWE will search for XPDL files when using Open dialog).
   # New configuration parameter to specify if XPDL should be saved when Apply button is pressed in property panel. 
     Parameter name is ApplyActionSavesXPDL and if it is set to true, whenever apply button is pressed, XPDL will be saved.
          
2014-05-22 Sasa Bojanic <sasaboy@together.at>
   # Now XPDL is not marked as "Not saved" in the case opened XPDL has different values for EDITING_TOOL or EDITING_TOOL_VERSION extended attribute of package

2014-05-08 Sasa Bojanic <sasaboy@together.at>
   # Artifact's TextAnnotation is now represented by TextArea with several rows
   # Shark mode: Script expressions now have 15 characters
   
2014-04-26 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - Support for new extended attribute "IS_ACTIVITY_SCOPE_ONLY"

2014-03-19 Sasa Bojanic <sasaboy@together.at>
   # LDAP component now supporting different ldap protocols (e.g. ldap and ldaps) (also new parameter in ldap.properties to be able to pre-configure it)

2013-11-19 Sasa Bojanic <sasaboy@together.at>
   # Fix bug with font size for artifact and gateways: now the font size is respecting system settings

2013-11-04 Sasa Bojanic <sasaboy@together.at>
   # Added possibility to configure the content and order of application's title text with 7 possible placeholders